--- a/index.ipynb
+++ b/index.ipynb
@@ -72,13 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = 'January' # \"January\""
+    "travel_month = 'January'\n",
+    "# \"January\""
    ]
   },
   {
